<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="0dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/additm_title"
            android:id="@+id/addTextViewTitle"
            android:padding="2dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/addEditTextTitle"
            android:maxLength="25"
            android:maxLines="1"
            android:lines="1"
            android:hint="@string/additm_title_hint"
            android:paddingLeft="2dp"
            android:paddingTop="2dp"
            android:paddingRight="2dp"
            android:paddingBottom="10dp"
            android:inputType="textAutoComplete"
            android:elegantTextHeight="false" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/additm_type"
            android:id="@+id/addTextViewType"
            android:padding="2dp" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/addTypeSpinner" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/additm_storyoutline"
            android:id="@+id/addTextViewOutline"
            android:padding="0dp"
            android:paddingLeft="2dp"
            android:paddingTop="2dp"
            android:paddingRight="2dp"
            android:paddingBottom="6dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/addEditTextOutline"
            android:hint="@string/additm_max_chars"
            android:paddingLeft="2dp"
            android:paddingTop="2dp"
            android:paddingRight="2dp"
            android:paddingBottom="10dp"
            android:inputType="textAutoComplete"
            android:maxLength="25" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/additm_rating"
            android:id="@+id/addTextViewRating"
            android:padding="2dp" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/addSpinnerRating" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/additm_lang"
            android:id="@+id/addTextViewLanguage"
            android:padding="2dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/addEditTextLang"
            android:text="@string/additm_lang_hint"
            android:maxLength="25"
            android:paddingLeft="2dp"
            android:paddingTop="2dp"
            android:paddingRight="2dp"
            android:paddingBottom="10dp"
            android:hint="@string/additm_lang_hint"
            android:inputType="textAutoComplete" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/additm_runtime"
            android:id="@+id/addTextViewTime"
            android:padding="2dp"
            android:maxLength="8" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/addEditTextTime"
            android:hint="@string/additm_time_hint"
            android:focusableInTouchMode="true"
            android:padding="2dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/additm_btn"
            android:id="@+id/addItmButton"
            android:onClick="addItemClick"
            android:enabled="false" />

    </LinearLayout>
</ScrollView>